[gd_scene load_steps=9 format=3 uid="uid://dg08whuakg7gd"]

[ext_resource type="Texture2D" uid="uid://chpuyugmtxpaq" path="res://assets/visuals/tutorial_bot/rita1.png" id="1_6eafj"]
[ext_resource type="Script" path="res://characters/tutorial_character.gd" id="1_q61uv"]
[ext_resource type="Texture2D" uid="uid://2aqke5m0f5uv" path="res://assets/visuals/tutorial_bot/rita2.png" id="2_j7gcc"]
[ext_resource type="Texture2D" uid="uid://28xybsl2lhhq" path="res://assets/visuals/tutorial_bot/rita3.png" id="3_23fo0"]
[ext_resource type="Texture2D" uid="uid://cmh7o6ebf4lmf" path="res://assets/visuals/textbox/interaction_prompt.png" id="5_2br78"]
[ext_resource type="PackedScene" uid="uid://c0l3pv3ijbkuc" path="res://ui_stuff/dialog_box.tscn" id="6_ewc35"]

[sub_resource type="SpriteFrames" id="SpriteFrames_l7o75"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_6eafj")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_j7gcc")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_23fo0")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_imcmk"]
radius = 206.0
height = 412.0

[node name="tutorialCharacter" type="Node2D"]
script = ExtResource("1_q61uv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_l7o75")
animation = &"2"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 3.14159
shape = SubResource("CapsuleShape2D_imcmk")

[node name="interaction" type="Sprite2D" parent="."]
position = Vector2(0, -94)
texture = ExtResource("5_2br78")

[node name="DialogBox" parent="." instance=ExtResource("6_ewc35")]
offset_left = -116.0
offset_top = -224.0
offset_right = 82.0
offset_bottom = -83.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
